--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div>
                     <span id="seconds">00</span>
-                    <span>Second</span>
+                    <span>Seconds</span>
                 </div>
                 <div class="tempo">
                     <span id="milliseconds">00</span>
